--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,10 +1,11 @@
 .Container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: left;
-    align-items: center;
-    font-size: 40;
-    color: #010101;
-    margin: 0 auto;
-}
+        display: flex;
+        max-width: 1200px;
+        flex-direction: column;
+        height: 700px;
+        align-items: left;
+        font-size: 40;
+        color: #010101;
+        margin: 0px auto;
+        padding: 0px 16px;
+    }
