--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -22,7 +22,8 @@
 }
 
 
-h3 {display: flex;
+h3 {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
@@ -44,5 +45,16 @@ h3 {display: flex;
 }
 
 button {
-    margin: 0 0 0 12px;
+    margin: 0px;
+    color: black;
+    background-color: rgb(238, 238, 238);
+    width: 100px;
+    height: 30px;
+    border: 1px;
+    border-radius: 5px;
+    margin: 12px;
+}
+
+.button:active {
+    box-shadow: 1px 1px 2px 1px rgba(52, 52, 52, 0.2);
 }
