--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -10,4 +10,13 @@
 
 .button {
     margin: 0px;
+    color: black;
+    background-color: rgb(238, 238, 238);
+    width: 70px;
+    height: 30px;
+    border-radius: 5px;
+}
+
+.button:active {
+    box-shadow: 1px 1px 2px 1px rgba(52, 52, 52, 0.2);;
 }
