--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,3 +1,14 @@
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 280px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 0 auto;
+
+}
 .contactList {
     display: flex;
     flex-direction: column;
