--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -15,8 +15,9 @@
     width: 70px;
     height: 30px;
     border-radius: 5px;
+    border: none;
 }
 
 .button:active {
-    box-shadow: 1px 1px 2px 1px rgba(52, 52, 52, 0.2);;
+    box-shadow: 1px 1px 2px 1px rgba(52, 52, 52, 0.5);
 }
