--- a/src/views/HomeView.module.css
+++ b/src/views/HomeView.module.css
@@ -1,12 +1,16 @@
 .container {
-    min-height: calc(100vh - 50px);
+    /* min-height: calc(100vh - 50px); */
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 405px;
+   
     }
 
 .title {
     font-weight: 500;
     font-size: 48pt;
     text-align: center;
+    margin-top: 0px;
+    color: white;
 }
