--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,11 +1,17 @@
 .link {
     display: inline-block;
     text-decoration: none;
+    letter-spacing: -1px;
     padding: 12px;
-    font-weight: 700;
-    color: #2a363b;
+    font-weight: 500;
+    color: rgba(42, 54, 60, .6);
 }
 
-.link.active {
+.link:hover {
+    color: #f0a6b0;
+}
+
+
+.link:active {
     color: #e84a5f;
 }
