--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -8,6 +8,8 @@
     padding: 10px;
     margin: 0 auto;
 
+    border-radius: 10px;
+
 }
 .contactList {
     display: flex;
@@ -24,7 +26,12 @@
     display: flex;
     align-items: center;
     align-content: space-between;
+    margin-bottom: 10px;
 }
+
+/* .contactList_item_name {
+    display: flex;
+} */
 
 .contactList_item_label {
     display: flex;
@@ -35,6 +42,14 @@
 
 }
 
+.contactList_item_label_spin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-between;
+    margin: 10px auto;
+}
+
 p {
     display: flex;
     font-size: 9pt;
@@ -42,14 +57,14 @@ p {
 }
 
 .btn {
-    
     margin: 0px;
-    color: black;
-    background-color: rgb(238, 238, 238);
+    /* margin-left: 5px; */
+    color: rgb(68, 68, 68);
+    background-color: rgba(238, 238, 238, .5);
     width: 70px;
     height: 30px;
     border: 1px;
-    border-radius: 5px;
+    border-radius: 15px;
 }    
     
 .btn:active {
