--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -3,10 +3,12 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 200px;
+    width: 260px;
     border: 1px solid #ccc;
     padding: 10px;
     margin: 0 auto;
+
+    border-radius: 12px;
 
 }
 
@@ -46,8 +48,8 @@ h3 {
 
 .button {
     margin: 0px;
-    color: black;
-    background-color: rgb(238, 238, 238);
+    color: rgb(68, 68, 68);
+    background-color: rgba(238, 238, 238, .5);
     width: 100px;
     height: 30px;
     border: 1px;
