--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,9 +1,31 @@
 .wrapper {
     display: flex;
     align-items: center;
-    gap: 12px;
+    justify-content: center; 
+    /* gap: 12px; */
 }
 
 .username {
-    font-weight: 700;
+    font-weight: 500;
+    font-size: 18px;
+    color: rgb(255, 255, 255, .6);
+}
+
+.link {
+    display: inline-block;
+    text-decoration: none;
+    letter-spacing: -1px;
+    padding: 12px;
+    font-weight: 500;
+    color: rgba(42, 54, 60, .6);
+    /* color: rgba(255, 255, 255, 0.6); */
+}
+
+.link:hover {
+    color: #f0a6b0;
+}
+
+
+.link:active {
+    color: #e84a5f;
 }
