--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,6 @@
 /* @import-normalize;  */
 /* bring in normalize.css styles */
 
-/* html {
-  width: 100%;
-  height: 100%;
-
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-} */
-
 html,
 body {
   width: 100%;
@@ -17,18 +8,16 @@ body {
 }
 
 body {
-  /* margin: 0;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  -moz-osx-font-smoothing: grayscale;
 
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-
-  
 }
 
 @keyframes gradient {
@@ -44,6 +33,19 @@ body {
     background-position: 0% 50%;
   }
 }
+
+@font-face {
+  font-family: 'Bello Pro';
+  src: url('../../goit-react-hw-08-phonebook/public/Bello_PRO/Bello-Pro.eot');
+  src: local('Bello Pro'), local('Bello-Pro'),
+    url('../../goit-react-hw-08-phonebook/public/Bello_PRO/Bello-Pro.eot?#iefix') format('embedded-opentype'),
+    url('../../goit-react-hw-08-phonebook/public/Bello_PRO/Bello-Pro.woff2') format('woff2'),
+    url('../../goit-react-hw-08-phonebook/public/Bello_PRO/Bello-Pro.woff') format('woff'),
+    url('../../goit-react-hw-08-phonebook/public/Bello_PRO/Bello-Pro.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+} 
 
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
