--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ body {
   }
 }
 
+/* link font from: public -> Bello_PRO */
 @font-face {
   font-family: 'Bello Pro';
   src: url('../../goit-react-hw-08-phonebook/public/Bello_PRO/Bello-Pro.eot');
